upgrade cas client version

--- a/app/views/js_templates/xingcloud.js.erb
+++ b/app/views/js_templates/xingcloud.js.erb
@@ -125,7 +125,7 @@ Event.domReady.add(function() {
                                         + "<a href='#' class='dropdown-toggle' data-toggle='dropdown'><%= session[:cas_user] %><b class='caret'></b></a>"
                                         + "<ul class='dropdown-menu'>"
                                             + "<li><a href='/users/edit_current'>Change Password</a></li>"
-                                            + "<li><a href='/users/sign_out' data-method='delete' rel='nofollow'>logout</a></li>"
+                                            + "<li><a href='/sign_out' data-method='delete' rel='nofollow'>logout</a></li>"
                                         + "</ul>"
                                 + "</ul>"
                             + "</div>"
