--- a/app/views/layouts/welcome.haml
+++ b/app/views/layouts/welcome.haml
@@ -31,6 +31,7 @@
               = tab.project "Projects", projects_path
               = tab.role "Role",roles_path
               = tab.user "User",users_path
+              = tab.template '通用菜单管理',template_menus_path
 
     .container-fluid
       .page_top
