--- a/app/views/menus/_new.haml
+++ b/app/views/menus/_new.haml
@@ -3,7 +3,7 @@
   .page-header
     .h3
       一般信息
-      %small 菜单名称及描述
+      %small 菜单名称及描述  报表可多选，最多选择四个报表
   .form-stocked
 
     %fieldset
@@ -18,11 +18,6 @@
           = f.input :desc
           = f.hidden_field(:project_id)
 
-        .span7
-          %h4
-            菜单名称
-          %p
-            描述 报表可多选，最多选择四个报表
   .form-actions
     = f.submit "提交", :class => "btn btn-primary"
     = link_to "取消", project_menus_path(@project), :class => "btn"
