--- a/app/views/menus/show.haml
+++ b/app/views/menus/show.haml
@@ -2,8 +2,16 @@
 .row-fluid
   .span3
     .well.sidebar-nav
-      %h3 菜单
+      %h3 通用菜单
       #sortable
+        = nested_list @common_menus do |comm_menu|
+          - if comm_menu.root?
+            = "#{comm_menu.name}"
+          -else
+            = link_to "#{comm_menu.name}",project_menu_path(@project,comm_menu)
+
+      %h3 自定义菜单
+      #custom
         = nested_list @menus.roots do |menu|
           - if menu.child?
             = link_to "#{menu.name}",project_menu_path(@project,menu)
