--- a/app/views/menus/_edit.haml
+++ b/app/views/menus/_edit.haml
@@ -1,26 +1,3 @@
 - title "编辑菜单"
 
-= simple_form_for @menu, :as => :menu, :url=> project_menu_path(@project,@menu),:html => {:class => "form-horizontal"} do |f|
-  .page-header
-    .h3
-      一般信息
-      %small 菜单名称及描述  报表可多选，最多选择四个报表
-  .form-stocked
-
-    %fieldset
-      .row-fluid
-        .span6
-          = f.input :name
-          - if @menu.child?
-            .control-group.string.optional
-              %label.string.optional.control-label
-                %div　报表
-                %div.controls
-                  = select_tag :report_id, options_for_select(@report.map {|p| [ p.title, p.id ] },@menu.report_ids),{ :multiple => true, :size =>6, :id => "menu_report" }
-
-          = f.input :desc
-          = f.hidden_field(:project_id)
-
-  .form-actions
-    = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", project_menus_path(@project), :class => "btn"
+= render 'form'
