--- a/app/views/menus/show.haml
+++ b/app/views/menus/show.haml
@@ -6,4 +6,17 @@
   .span10
     .hero
       还没有为该菜单设置报告，
-      = link_to "点击这里进行配置", edit_project_menu_path(@project, @menu)
+      = link_to "点击这里进行配置", "javascript:void(0)",:onclick=>"edit_menu('#{edit_project_menu_path(@project,@menu)}')"
+
+.modal.fade#menu{:style=>"height:800px;width:800px;display:none",:title=>'添加菜单'}
+
+:javascript
+
+  function edit_menu(url) {
+    $.get(url, function(data, status) {
+      if (status == 'success') {
+        $("#menu").html(data);
+      }
+    }, 'html')
+    $("#menu").modal();
+  }
