--- a/app/views/metrics/_form.haml
+++ b/app/views/metrics/_form.haml
@@ -1,8 +1,27 @@
 - (0...6).each do |i|
-  = builder.input "event_key_#{i}", :include_blank => false, :label => "事件第#{i+1}层"
+  = builder.input "event_key_#{i}", :include_blank => false, :label => "事件第#{i+1}层" do
+    = builder.text_field "event_key_#{i}"
+    = link_to_function "选择", "load_event(this)", :class => "btn btn-small", "data-toggle" => "modal", "data-target" => "modal_#{i}"
+    
+  .modal.hide.fade{:id => "modal_#{i}"}
+    .modal-header
+      %a.close{"data-dismiss" => "modal"} x
+      %h3 符合条件的值
+    .modal-body
+      loading..
+    .modal-footer
+      %a.btn{"data-dismiss" => "modal"} 取消
+    
+.control-group.string.optional
+  %label.string.optional.control-label
+    符合条件的事件数量
+  .controls
+    %span.label.label-info
+      123
+  
+  
 = builder.input :condition, :collection => translate_collection(Metric::OPERATIONS, :scope => "metric"), :include_blank => false
 
 = builder.input :comparison do
-  事件的值
   = builder.select :comparison_operator, translate_collection(Metric::COMPARISION_OPERATORS, :scope => "metric"), {:include_blank => true}, :style => "width: auto"
   = builder.text_field :comparison, :style => "width: 50px"
