fix xingcloud js

--- a/app/views/js_templates/xingcloud.js.erb
+++ b/app/views/js_templates/xingcloud.js.erb
@@ -118,7 +118,7 @@ Event.domReady.add(function() {
                             + "<a class='brand' href='http://p.xingcloud.com'>行云</a>"
                             + "<div class='container-fluid nav-collapse'>"
                                 + "<ul class='nav'>"
-                                    + "<li class='active'><a href='<%= project_path(@project) %>'>数据分析</a></li>"
+                                    + "<li class='active'><a href='<%= project_url(@project) %>'>数据分析</a></li>"
                                     + "<li><a href='http://rrdsrv.xingcloud.com/?identifier=<%= @project.identifier %>'>云监控</a></li>"
                                 + "</ul>"
                                 + "<ul class='nav pull-right'>"
