--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -38,7 +38,7 @@
         = yield
       
       %footer
-        %p &copy; Company 2012
+        %p &copy; XingCloud 2012
     /
       Le javascript
       \==================================================
