--- a/app/views/reports/index.haml
+++ b/app/views/reports/index.haml
@@ -1,7 +1,8 @@
 %p
   = link_to "添加自定义报告", new_project_report_path(@project), :class => "btn"
   = link_to "添加模板报告", choose_template_project_reports_path(@project), :class => "btn"
-  
+  = link_to "导入模板报告", import_template_project_reports_path(@project), :class => "btn", :method => "post"
+
 %table.table
   %tr
     %th 报告名称
