--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,10 +31,10 @@
         .subnav{:style => "margin-bottom: 10px"}
           = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
             = tab.project "首页", project_path(@project)
-            = tab.report "自定义报告", project_reports_path(@project)
-            = tab.menu '自定义菜单管理', project_menus_path(@project)
+            = tab.report "报告管理", project_reports_path(@project)
+            = tab.menu '菜单管理', project_menus_path(@project)
             - if session["cas_user"] == "yakjuly"
-              = tab.template '通用菜单管理',template_menus_path, :style => "float:right;"
+              = tab.template '预设菜单管理',template_menus_path, :style => "float:right;"
         = notice_message
         = yield
       
