--- a/app/views/metrics/new.haml
+++ b/app/views/metrics/new.haml
@@ -14,8 +14,8 @@
         = render :partial => "form", :locals => {:builder => combine}
         
   .form-actions
-    = f.submit "Submit", :class => "btn btn-primary"
-    = link_to_function "取消", "close_dialog()"
+    = f.submit "提交", :class => "btn btn-primary"
+    = link_to_function "取消", "close_dialog()", :class => "btn"
 
 :javascript
   PROJECT_IDENTIFIER = "#{@project.identifier}";
