--- a/app/views/admin/template_menus/_form.haml
+++ b/app/views/admin/template_menus/_form.haml
@@ -1,4 +1,4 @@
-= simple_form_for @menu, :as => :menu, :url => @menu.new_record? ? template_menus_path : template_menu_path(@menu),:html => {:class => "form-horizontal"} do |f|
+= simple_form_for @menu, :as => :menu, :url => @menu.new_record? ? admin_template_menus_path : admin_template_menu_path(@menu),:html => {:class => "form-horizontal"} do |f|
   .page-header
     .h3
       一般信息
@@ -18,4 +18,4 @@
 
   .form-actions
     = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", template_menus_path, :class => "btn"
+    = link_to "取消", admin_template_menus_path, :class => "btn"
