--- a/app/views/admin/template_menus/index.haml
+++ b/app/views/admin/template_menus/index.haml
@@ -16,16 +16,16 @@
         %td= menu.name
         %td= menu.desc
         %td= menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
-        %td= link_to_edit "javascript:void(0)",:onclick=>"edit_menu('#{edit_template_menu_path(menu)}')"
-        %td= link_to_delete template_menu_path(menu)
+        %td= link_to_edit "javascript:void(0)",:onclick=>"edit_menu('#{edit_admin_template_menu_path(menu)}')"
+        %td= link_to_delete admin_template_menu_path(menu)
       - unless menu.children.blank?
         - menu.children.each do |sub_menu|
           %tr
             %td= raw "&nbsp;&nbsp;&nbsp;#{sub_menu.name}"
             %td= sub_menu.desc
             %td= sub_menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
-            %td= link_to_edit "javascript:void(0)",:onclick=>"edit_menu('#{edit_template_menu_path(sub_menu)}')"
-            %td= link_to_delete template_menu_path(sub_menu)
+            %td= link_to_edit "javascript:void(0)",:onclick=>"edit_menu('#{edit_admin_template_menu_path(sub_menu)}')"
+            %td= link_to_delete admin_template_menu_path(sub_menu)
 
 
 .modal.fade#menu{:style=>"height:600px;width:800px;display:none",:title=>'添加菜单'}
