--- a/app/views/layouts/menu.haml
+++ b/app/views/layouts/menu.haml
@@ -29,7 +29,7 @@
           .container-fluid.nav-collapse
             = tabs_tag :namespace => :topbar, :builder => TabsOnRails::Bootstrap, :open_tabs => {:class => "nav"} do |tab|
               = tab.project "Projects", projects_path
-              = tab.template '通用菜单管理',template_menus_path
+              = tab.template '通用菜单管理',admin_template_menus_path
     .container-fluid
       .page_top
         = render_breadcrumb
