--- a/app/views/menus/index.haml
+++ b/app/views/menus/index.haml
@@ -1,28 +1,32 @@
+- javascript "menus"
 
 .btn{:'add_menu'=> "#{new_project_menu_path(@project)}"} 添加菜单
-.btn{:'reorder_menu'=> "#{reorder_project_menus_path(@project)}"} 菜单排序
+-#.btn{:'reorder_menu'=> "#{reorder_project_menus_path(@project)}"} 菜单排序
 
 %div{:style=>'visibility:hidden;height:10px'}
 
 %table.table.table-bordered
-  %tr
+  %tr{:style=>"cursor:''"}
     %th 菜单名称
     %th 菜单描述
     %th 创建时间
     %th
     %th
+
   - @menus.each do |menu|
     - if !menu.child?
-      %tr
-        %td= menu.name
+      %tr{:id => "menu[#{menu.id}]=root" }
+        %td
+          %span.folder= menu.name
         %td= menu.desc
         %td= menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
         %td= link_to_edit "javascript:void(0)",:onclick=>"edit_menu('#{edit_project_menu_path(@project,menu)}')"
         %td= link_to_delete project_menu_path(@project,menu)
       - unless menu.children.blank?
         - menu.children.each do |sub_menu|
-          %tr
-            %td= raw "&nbsp;&nbsp;&nbsp;#{sub_menu.name}"
+          %tr{:id => "menu[#{sub_menu.id}]=#{menu.id}" }
+            %td
+              %span.file= raw "&nbsp;&nbsp;&nbsp;#{sub_menu.name}"
             %td= sub_menu.desc
             %td= sub_menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
             %td= link_to_edit "javascript:void(0)",:onclick=>"edit_menu('#{edit_project_menu_path(@project,sub_menu)}')"
@@ -31,4 +35,21 @@
 
 .modal.fade#menu{:style=>"height:800px;width:800px;display:none",:title=>'添加菜单'}
 
-= javascript_include_tag 'models/menu.js'
+:javascript
+  $(function(){
+    $(".table").tableDnD({
+      onDrop:function(table, row){
+        menus = $(".table").tableDnDSerialize();
+        $.post("#{reorder_project_menus_path(@project)}",{menu:menus},
+          function(data){
+
+          })
+      }
+    });
+  });
+
+
+= javascript_include_tag 'menu.js'
+
+
+
