--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,3 +117,18 @@
             border-radius: 0;
   }
 }
+
+table span {
+  background-position: center left;
+  background-repeat: no-repeat;
+  padding: .2em 0 .2em 1.5em;
+}
+
+table span.file {
+  background-image: url(page_white_text.png);
+  padding-left: 20px
+}
+
+table span.folder {
+  background-image: url(folder.png);
+}
