--- a/app/views/admin/template_menus/_form.haml
+++ b/app/views/admin/template_menus/_form.haml
@@ -9,6 +9,7 @@
       .row
         .span6
           = f.input :name
+          = f.input :parent_id,:collection => @menus
           .control-group.string.optional
             %label.string.optional.control-label
               %div　报表
