--- a/app/views/admin/template_menus/index.haml
+++ b/app/views/admin/template_menus/index.haml
@@ -1,5 +1,4 @@
 .btn{:'add_menu'=>''} 添加菜单
-.btn{:'reorder_menu'=>''} 菜单排序
 
 %div{:style=>'visibility:hidden;height:10px'}
 
@@ -12,7 +11,7 @@
     %th
   - @menus.each do |menu|
     - if !menu.child?
-      %tr
+      %tr{:id => "menu[#{menu.id}]=root" }
         %td= menu.name
         %td= menu.desc
         %td= menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
@@ -20,7 +19,7 @@
         %td= link_to_delete admin_template_menu_path(menu)
       - unless menu.children.blank?
         - menu.children.each do |sub_menu|
-          %tr
+          %tr{:id => "menu[#{sub_menu.id}]=#{menu.id}" }
             %td= raw "&nbsp;&nbsp;&nbsp;#{sub_menu.name}"
             %td= sub_menu.desc
             %td= sub_menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
@@ -31,3 +30,16 @@
 .modal.fade#menu{:style=>"height:600px;width:800px;display:none",:title=>'添加菜单'}
 
 = javascript_include_tag 'template_menus.js'
+
+:javascript
+  $(function(){
+    $(".table").tableDnD({
+      onDrop:function(table, row){
+        menus = $(".table").tableDnDSerialize();
+        $.post("#{reorder_admin_template_menus_path}",{menu:menus},
+          function(data){
+
+          })
+      }
+    });
+  });
