add yield :head

--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -9,8 +9,10 @@
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
 
+    %script{:type => "text/javascript", :src => "/xingcloud/global.js?skip_auth=true"}
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
+    = yield :head
 
     :css
       body {
