--- a/app/views/menus/_form.haml
+++ b/app/views/menus/_form.haml
@@ -10,7 +10,7 @@
         .span6
           = f.input :name
           = f.input :parent_id,:collection => @menus
-          .control-group.string.optional
+          .control-group.string.optional#parent_menus_sel{:style=>'display:none;'}
             %label.string.optional.control-label
               %div　报表
               %div.controls
@@ -20,4 +20,18 @@
 
   .form-actions
     = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", project_menus_path(@project), :class => "btn"
+    = link_to "取消", "javascript:void(0)", :onclick=>"$('#menu').modal('hide')",:class => "btn"
+
+:javascript
+  $(function(){
+    $("select").change(function(){
+      $("select option:selected").each(function(ele,t){
+        if ($(t).val() == 0){
+         $("#parent_menus_sel").hide();
+        }else{
+          $("#parent_menus_sel").show();
+        }
+      });
+
+    });
+  });
