--- a/app/views/layouts/_popup.haml
+++ b/app/views/layouts/_popup.haml
@@ -1,6 +1,8 @@
 .modal-header
   %a.close{:'data-dismiss' => 'modal'} ×
-  %h3 &nbsp;
+  %h3
+    一般信息
+    %small 菜单名称及描述
 
 .modal-body
   = yield
