--- a/app/views/admin/template_menus/_form.haml
+++ b/app/views/admin/template_menus/_form.haml
@@ -1,20 +1,18 @@
+
 = simple_form_for @menu, :as => :menu, :url => @menu.new_record? ? admin_template_menus_path : admin_template_menu_path(@menu),:html => {:class => "form-horizontal"} do |f|
-  .page-header
-    .h3
-      一般信息
-      %small 菜单名称及描述
+
   .form-stocked
 
     %fieldset
       .row
         .span6
           = f.input :name
-          = f.input :parent_id,:collection => @menus
-          .control-group.string.optional#parent_menus_sel{:style=>'display:none;'}
+          = f.input :parent_id,:collection => @menus ,:input_html => {:class =>'chzn-select'}
+          .control-group.string.optional#parent_menus_sel{:style=>"#{@menu.new_record? ? 'display:none;' : 'display:block;' }"}
             %label.string.optional.control-label
               %div　报表
               %div.controls
-                = select_tag :report_id, options_for_select(@reports.map {|p| [ p.title, p.id ] },@menu.report_ids),{ :multiple => true, :size =>4, :id => "menu_report" }
+                = select_tag :report_id, options_for_select(@reports.map {|p| [ p.title, p.id ] },@menu.report_ids),{:class=>'chzn-select',:multiple => true, :size =>4, :id => "menu_report" }
           = f.input :desc
 
   .form-actions
@@ -23,6 +21,7 @@
 
 :javascript
   $(function(){
+    $(".chzn-select").chosen();
     $("select").change(function(){
       $("select option:selected").each(function(ele,t){
         if ($(t).val() == 0){
